# IrcBot

./: CMakeLists.txt
DuIrcLib/: CMakeLists.txt
DuIrcLib/include/: DuCallbacks.hpp  DuServer.h  DuSession.h  IReader.h  IWriter.h  IrcClient.h  IrcConnection.h  IrcProtocol.h  Pinger.h
DuIrcLib/src/: DuCallbacks.cpp  DuServer.cpp  IrcClient.cpp  IrcConnection.cpp  IrcProtocol.cpp
IrcExample/: CMakeLists.txt
IrcExample/include/: RegexEngine.h  SimpleReader.h  SimpleWriter.h
IrcExample/src/: main.cpp
IrcServer/: CMakeLists.txt
IrcServer/src/: main.cpp
